--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,31 @@
+
+/*header*/
+header {
+  background-color:#DBA901; 
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+}
+
+nav li {
+  margin: 0 10px;
+}
+
+nav a {
+  color: rgb(26, 24, 24);
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+/*body*/
 body {
   background-color: rgb(26, 24, 24);
   color   : #DBA901;
@@ -30,6 +58,11 @@ body {
   .product img {
     max-width: 100%;
     margin-bottom: 10px;
+  }
+
+  p{
+    font-weight: bold;
+   
   }
 
   button {
@@ -121,7 +154,11 @@ li {
 p {
   font-size: 16px;
   line-height: 1.5;
-  color: #999;
+  color: #ffffff;
+}
+.parra{
+  font-size: 20px;
+  color: #DBA901;
 }
 
 .alert {
