--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="DrinkHome.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-    <link rel="apple-touch-icon" href="DrinkHome.ico"/>
+    <title>{{@root.title}}</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <header>
+  <nav>
+    <ul>
+      <li><a href="/">HOME</a></li>
+      <li><a href="/products">PRODUCTOS</a></li>
+      <li><a href="/cart/645a782fc3f7ec4565e33c3c">CARRITO</a></li>
+    </ul>
+  </nav>
+</header>
     {{{body}}}
 </body>
 </html>
