Fede Mosquera Proyecto Final2

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,10 +1,13 @@
 <div class="container">
+    <br>
     <h1 class="title">Orden de Compra</h1>
+    <br>
+    <br>
   <div class="gallery">
     {{#each cart.products}}
       <div class="product">
         <h2>{{this.product.title}}</h2>
-        <p>{{this.quantity}}</p>
+        <p>Unidades: {{this.quantity}}</p>
           <img src="{{this.product.img}}" alt="{{this.title}}">
         <p>{{this.product.description}}</p>
         <p class="parra">Price ${{this.product.price}}</p>
@@ -14,5 +17,6 @@
       </div>
     {{/each}}
   </div>
+  <br>
     <h2>Total: ${{total}}</h2>
   </div>
