--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,4 +1,6 @@
-
+* {margin: 0;
+  box-sizing: content-box;
+}
 /*header*/
 header {
   background-color:#DBA901; 
@@ -21,7 +23,18 @@ nav li {
 nav a {
   color: rgb(26, 24, 24);
   text-decoration: none;
-  font-size: 18px;
+  font-size: 15px;
+  font-weight: bold;
+}
+nav a:hover{
+  color: #b6000f;
+}
+footer{
+  background-color: #DBA901;
+  margin-top: 100px;
+  color: black;
+  text-align: center;
+  padding: 20px;
   font-weight: bold;
 }
 
@@ -65,6 +78,11 @@ body {
    
   }
 
+  input{
+    padding: 8px;
+    border-radius: 7px;
+  }
+
   button {
     cursor: pointer;
     background-color: #b6000f;
@@ -88,6 +106,9 @@ body {
   .button2:hover{
     background-color: #6d5400;
   }
+  .title {
+    margin-top: 20px;
+  }
 
 .galeria{
   display: flex;
@@ -98,7 +119,7 @@ body {
 }
 
 
-/* Estilos para la sección de fondo */
+
 .fondo {
   background-color: #f2f2f2;
   padding: 20px;
@@ -115,8 +136,6 @@ body {
 /* Estilos para la sección de galería */
 .galleria {
   height: 200px;
-  background-image: url('ruta/de/la/imagen.jpg');
-  background-size: cover;
   border: 1px solid #ccc;
   margin-bottom: 10px;
 }
@@ -167,5 +186,6 @@ p {
 
 }
 .formulario{
+  margin-top: 20px;
   margin-bottom: 40px;
 }
