--- a/src/views/prod.handlebars
+++ b/src/views/prod.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="title">TODOS PRODUCTOS</h1>
+    <h1 class="title">CATALOGO</h1>
     <div class="formulario">
       <form action="/products" method="get">
         <input  class="input" type="text" name="query" placeholder="Buscar producto...">
@@ -28,10 +28,3 @@
   <a href="/products?page={{nextPage}}"><button class="button2">Siguiente</button></a>
   {{/if}}
 </div>
-
-{{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/home.js"></script>
- --}}
-
-
