--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -15,23 +15,13 @@
         <h2>{{this.title}}</h2>
           <img src="{{this.img}}" alt="{{this.title}}">
         <p>{{this.description}}</p>
-        <p>Price: {{this.price}}</p>
+        <p>${{this.price}}</p>
         <p>Stock: {{this.stock}}</p>
         <button>Agregar al carrito</button>
       </div>
     {{/each}}
   </div>
-  {{#if hasPrevPage}}
-  <a href="/products?page={{prevPage}}"><button class="button2">Anterior</button></a>
-  {{/if}}
-   {{#if hasNextPage}}
-  <a href="/products?page={{nextPage}}"><button class="button2">Siguiente</button></a>
-  {{/if}}
 </div>
 
-{{!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/home.js"></script>
- --}}
 
 
