--- a/src/views/prod.handlebars
+++ b/src/views/prod.handlebars
@@ -15,8 +15,10 @@
         <h2>{{this.title}}</h2>
           <img src="{{this.img}}" alt="{{this.title}}">
         <p>{{this.description}}</p>
+        <p>Category: {{this.category}}</p>
         <p>Price: {{this.price}}</p>
         <p>Stock: {{this.stock}}</p>
+        {{!-- <p>Disponibilidad: {{this.status}}</p> --}}
         <button>Agregar al carrito</button>
       </div>
     {{/each}}
