--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -28,6 +28,7 @@ nav a {
 }
 nav a:hover{
   color: #b6000f;
+  
 }
 footer{
   background-color: #DBA901;
@@ -55,18 +56,21 @@ body {
     width: 100%;
     margin: 0 auto;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
   }
   
   .product {
     border-radius: 20px;
-    width: 20vh;
+    width: 25vh;
     margin-bottom: 30px;
     padding: 20px;
     border: 1px solid #ccc;
     text-align: center;
     background-color: rgb(65, 65, 65);
+    transition: transform 0.3s ease;
+    margin-top: 25px;
   }
+
   
   .product img {
     max-width: 100%;
@@ -192,4 +196,12 @@ p {
 
 .fondofoto{
   position: relative;
+}
+
+.product:hover {
+  transform: translateY(-10px);
+  background-color: rgb(112, 2, 2);
+  box-shadow: 0 4px 6px 2px #f5f4f488;
+  transform: scale(1.1);
+  cursor: pointer;
 }
