Proyecto Final modificando el front

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,6 +1,5 @@
 <div class="container">
-    <br>
-    <h1 class="title">Orden de Compra</h1>
+    <h1 class="title">ORDEN DE COMPRA</h1>
     <br>
     <br>
   <div class="gallery" id="product-container">
@@ -17,5 +16,10 @@
     {{/each}}
   </div>
   <br>
+ 
     <h2>Total: ${{total}}</h2>
+ <div class="background-image2">
+    <img src="">
   </div>
+  </div>
+
