--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,5 +1,8 @@
 <div class="container">
-    <h1 class="title">TODOS PRODUCTOS</h1>
+  <div class="background-image">
+    <img src="">
+  </div>
+   {{!--  <h1 class="title">TODOS PRODUCTOS</h1> --}}
     <div class="formulario">
       <form action="/products" method="get">
         <input  class="input" type="text" name="query" placeholder="Buscar producto...">
