--- a/src/views/prod.handlebars
+++ b/src/views/prod.handlebars
@@ -1,4 +1,7 @@
 <div class="container">
+    <div class="background-image">
+    <img src="">
+  </div>
     <h1 class="title">CATALOGO</h1>
     <div class="formulario">
       <form action="/products" method="get">
