--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -3,7 +3,7 @@
 }
 /*header*/
 header {
-  background-color:#DBA901; 
+  background-color:#700202; 
   padding: 20px;
   display: flex;
   justify-content: center;
@@ -21,19 +21,19 @@ nav li {
 }
 
 nav a {
-  color: rgb(26, 24, 24);
+  color: rgb(255, 255, 255);
   text-decoration: none;
   font-size: 15px;
   font-weight: bold;
 }
 nav a:hover{
-  color: #b6000f;
+  color: #000000;
   
 }
 footer{
-  background-color: #DBA901;
+  background-color: rgb(112, 2, 2);;
   margin-top: 100px;
-  color: black;
+  color: white;
   text-align: center;
   padding: 20px;
   font-weight: bold;
@@ -41,19 +41,19 @@ footer{
 
 /*body*/
 body {
-  background-color: rgb(26, 24, 24);
+  background-color: rgb(0, 0, 0);
   color   : #DBA901;
   font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   text-align: center;
 }
 .container {
-    max-width: 100vh;
+    width: 100%;
     margin: 0 auto;
   }
   
   .gallery {
     display: flex;
-    width: 100%;
+    width: 100vh;
     margin: 0 auto;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -66,10 +66,21 @@ body {
     padding: 20px;
     border: 1px solid #ccc;
     text-align: center;
-    background-color: rgb(65, 65, 65);
+    background-color: rgb(0, 0, 0);
     transition: transform 0.3s ease;
-    margin-top: 25px;
+    margin-top: 40px;
+    box-shadow: 0 4px 6px 2px #00000088;
   }
+
+  .product:hover {
+    transform: translateY(-10px);
+    background-color: rgb(112, 2, 2);
+    box-shadow: 0 4px 6px 2px #63161688;
+    transform: scale(1.1);
+    cursor: pointer;
+    border:  rgb(112, 2, 2)
+  }
+  
 
   
   .product img {
@@ -101,28 +112,32 @@ body {
   }
 .button2{
     cursor: pointer;
-    background-color: #DBA901;
+    background-color: #b6000f;
     border-radius: 5px;
     padding: 10px;
     border: none;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    margin-top: 50px;
+    transition: transform 0.3s ease;
   }
   .button2:hover{
-    background-color: #6d5400;
+    background-color: #550505;
+    transform: scale(1.1);
+    
   }
   .title {
     margin-top: 20px;
+    font-size: 50px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
 .galeria{
   display: flex;
   width: 100%;
-
   flex-wrap: nowrap;
   justify-content: space-around;
 }
-
-
 
 .fondo {
   background-color: #f2f2f2;
@@ -190,7 +205,7 @@ p {
 
 }
 .formulario{
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 40px;
 }
 
@@ -198,10 +213,11 @@ p {
   position: relative;
 }
 
-.product:hover {
-  transform: translateY(-10px);
-  background-color: rgb(112, 2, 2);
-  box-shadow: 0 4px 6px 2px #f5f4f488;
-  transform: scale(1.1);
-  cursor: pointer;
+.background-image{
+  background-image: url("../assest/portadaDrinkhome3.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 25vh;
+  width: 100%;
+  margin-top: 30px;
 }
