--- a/src/views/cookies.handlebars
+++ b/src/views/cookies.handlebars
@@ -1,13 +1,14 @@
 <div>
-    <h1>Cookis</h1>
+    <h1>Inicio Sesion </h1>
     <form id="cookieForm">
         <label >Nombre</label>
-        <input type="name">
+        <input class="name" name="name">
         <label >Correo Electronico</label>
-        <input type="email">
-        <input type="submit">
+        <input class="email" name="email">
+      
+        <input class="submit" type="submit" >
     </form>
-    <button onclick="getCookie()">obtener cookie</button>
+        <button onclick="getCookie()">Obtener Cookie</button>
 </div>
 
 <script src="/js/cookieSetter.js"></script>
