--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,4 +1,22 @@
 <div class="container">
+<nav>
+  <ul>
+    <li><a href="/">HOME</a></li>
+    <li><a href="/products">PRODUCTOS</a></li>
+    <li><a href="/cart/646267ba8cc04a3efca60438">CARRITO</a></li>
+  </ul>
+  <div class="user-dropdown">
+    <button class="user-dropdown-btn"> {{user.role}}</button>
+    <div class="user-dropdown-content">
+      <p class="users">User: {{user.name}}</p>
+      <p>Email: {{user.email}}</p>
+      <a href="/api/session/logout">
+        <button>Cerrar Sesión</button>
+      </a>
+    </div>
+  </div>
+</nav>
+
   <div class="background-image">
     <img src="">
   </div>
