--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <header>
+   {{!--  <header>
   <nav>
     <ul>
       <li><a href="/">HOME</a></li>
@@ -18,7 +18,7 @@
       <li><a href="/cart/646267ba8cc04a3efca60438">CARRITO</a></li>
     </ul>
   </nav>
-</header>
+</header> --}}
     {{{body}}}
     <footer>DrinkHome #Copyright</footer>
 </body>
