--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -10,6 +10,7 @@
     <div class="user-dropdown-content">
       <p class="users">User: {{user.name}}</p>
       <p>Email: {{user.email}}</p>
+      <a href="/profile"><button>Mi perfil</button> </a>
       <a href="/api/session/logout">
         <button>Cerrar Sesión</button>
       </a>
