--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -8,6 +8,8 @@
     <title>{{@root.title}}</title>
    {{!--  <link rel="apple-touch-icon" href="DrinkHome.ico"/> --}}
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="ruta_al_archivo/sweetalert2.css">
+
 </head>
 <body>
    {{!--  <header>
