--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,3 +1,6 @@
+<div class="container">
+<nav>
+</nav>
 <div class="login">
     <h1 class="loginH1">Inicio Sesion </h1>
     <form id="loginForm">
@@ -10,5 +13,7 @@
     </form>
         <p>No estas registrado ? <a href="/register"> Registrate aquí</a> </p>
 </div>
+</div>
 
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/js/login.js"></script>
