Proyecto Final Loguin

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -11,6 +11,7 @@
     <p class="parrafo">Nombre: {{user.name}}</p>
     <p class="parrafo">Email: {{user.email}}</p>
     <p class="parrafo">Rol: {{user.role}}</p>
+ {{!--    <p class="parrafo">Has iniciado sesión {{ sessionCounter }} veces.</p> --}}
     <a href="/api/session/logout"><button class="cs">Cerrar Sesion</button></a>
 </div>
 </div>
