--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -1,4 +1,11 @@
 <div class="container">
+<nav>
+  <ul>
+    <li><a href="/">HOME</a></li>
+    <li><a href="/products">PRODUCTOS</a></li>
+    <li><a href="/cart/646267ba8cc04a3efca60438">CARRITO</a></li>
+  </ul>
+  </nav>
     <h1 class="title">ORDEN DE COMPRA</h1>
     <br>
     <br>
