Proyecto Final Loguin

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -5,7 +5,18 @@
     <li><a href="/products">PRODUCTOS</a></li>
     <li><a href="/cart/646267ba8cc04a3efca60438">CARRITO</a></li>
   </ul>
-  </nav>
+  <div class="user-dropdown">
+    <button class="user-dropdown-btn"> {{user.role}}</button>
+    <div class="user-dropdown-content">
+      <p class="users">User: {{user.name}}</p>
+      <p>Email: {{user.email}}</p>
+      <a href="/profile"><button>Mi perfil</button> </a>
+      <a href="/api/session/logout">
+        <button>Cerrar Sesión</button>
+      </a>
+    </div>
+  </div>
+</nav>
     <h1 class="title">ORDEN DE COMPRA</h1>
     <br>
     <br>
