--- a/src/views/prod.handlebars
+++ b/src/views/prod.handlebars
@@ -1,15 +1,16 @@
 <div class="container">
-  <nav>
+ <nav>
   <ul>
     <li><a href="/">HOME</a></li>
     <li><a href="/products">PRODUCTOS</a></li>
     <li><a href="/cart/646267ba8cc04a3efca60438">CARRITO</a></li>
   </ul>
   <div class="user-dropdown">
-    <button class="user-dropdown-btn">Usuario</button>
+    <button class="user-dropdown-btn"> {{user.role}}</button>
     <div class="user-dropdown-content">
-      <p class="users">Nombre: {{user.name}}</p>
+      <p class="users">User: {{user.name}}</p>
       <p>Email: {{user.email}}</p>
+      <a href="/profile"><button>Mi perfil</button> </a>
       <a href="/api/session/logout">
         <button>Cerrar Sesión</button>
       </a>
