tp session , agregando funcionalidad al admin

--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -9,7 +9,7 @@
         <input name="last_name">
 
         <label>Edad</label>
-        <input name="Age">
+        <input name="age">
 
         <label>Email</label>
         <input name="email">
