--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,16 +1,8 @@
 * {margin: 0;
   box-sizing: content-box;
 }
-/*header*/
-/* header {
-  background-color:#700202; 
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-} */
 
-
-/*navbar*/
+/******************NAV BAR**********************/
 nav{
     background-color:#700202;
     display: flex;
@@ -94,13 +86,23 @@ nav{
 }
 /*FIN NAVBAR*/
 
-/*body*/
+/******************BODY**********************/
 body {
   background-color: rgb(0, 0, 0);
   color   : #DBA901;
   font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   text-align: center;
 }
+
+.background-image{
+  background-image: url("../assest/portadaDrinkhome3.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 25vh;
+  width: 100%;
+  margin-top: 30px;
+}
+
 .container {
     width: 100%;
     margin: 0 auto;
@@ -135,8 +137,6 @@ body {
     cursor: pointer;
     border:  rgb(112, 2, 2)
   }
-  
-
   
   .product img {
     max-width: 100%;
@@ -199,7 +199,10 @@ body {
   padding: 20px;
   border-radius: 5px;
 }
-/*FOOTER*/
+
+
+
+/******************FOOTER**********************/
 footer{
   background-color: rgb(112, 2, 2);
   margin-top: 100px;
@@ -241,6 +244,7 @@ footer{
   border-radius: 5px;
 }
 
+
 ul {
   list-style: none;
   margin: 0;
@@ -277,14 +281,6 @@ p {
   position: relative;
 }
 
-.background-image{
-  background-image: url("../assest/portadaDrinkhome3.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  height: 25vh;
-  width: 100%;
-  margin-top: 30px;
-}
 
 #cookieForm {
     align-items: center;
@@ -296,7 +292,15 @@ p {
   width: 200px;
 }
 
-/*LOGIN*/
+/*     LOGIN VIEWS        */
+.loginH1{
+  margin-top: 50px;
+}
+.login{
+  margin-top: 23vh;
+  margin-bottom: 23vh;
+}
+
 #loginForm{
   gap: 15px;
   display: flex;
@@ -306,6 +310,8 @@ p {
   margin-top: 120px;
   margin-bottom: 20px;
 }
+
+/*register*/
 #registerForm{
   gap: 15px;
   display: flex;
@@ -316,14 +322,9 @@ p {
   margin-bottom: 150px;
 }
 
-/*     LOGIN VIEWS        */
-.loginH1{
-  margin-top: 50px;
-}
-.login{
-  margin-top: 23vh;
-  margin-bottom: 23vh;
-}
+
+
+
 
 
 
@@ -342,6 +343,7 @@ p {
   margin-bottom: 50px;
   font-weight: 900;
 }
+
 /*boton cerrar sesion cs*/
 .cs{
   margin-top: 60px;
