--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,10 +1,24 @@
 <div class="container">
 <nav>
+  {{#if isAdmin}}
+  <div class="user-dropdown">
+    <button class="user-dropdown-btn">
+      <a href="/admin">Panel de Control</a>
+    </button>
+    <div class="user-dropdown-content">
+      <p>ELIMINAR USUARIOS</p>
+      <p>AGREGAR PRUDCTOS</p>
+  </div>
+  </div>
+    {{/if}}
   <ul>
     <li><a href="/">HOME</a></li>
     <li><a href="/products">PRODUCTOS</a></li>
     <li><a href="/cart/646267ba8cc04a3efca60438">CARRITO</a></li>
   </ul>
+  {{#if message}}
+  {{message}}
+    {{/if}}
   <div class="user-dropdown">
     <button class="user-dropdown-btn"> {{user.role}}</button>
     <div class="user-dropdown-content">
@@ -17,7 +31,6 @@
     </div>
   </div>
 </nav>
-
   <div class="background-image">
     <img src="">
   </div>
@@ -28,9 +41,7 @@
         <button type="submit">Buscar</button>
       </form>
     </div>
-    {{#if message}}
-  <div class="alert alert-warning">{{message}}</div>
-    {{/if}}
+
   <div class="gallery">
     {{#each products}}
       <div class="product">
