--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -3,12 +3,8 @@
   {{#if isAdmin}}
   <div class="user-dropdown">
     <button class="user-dropdown-btn">
-      <a href="/admin">Panel de Control</a>
+      <a href="/admin">CONTROL</a>
     </button>
-    <div class="user-dropdown-content">
-      <p>ELIMINAR USUARIOS</p>
-      <p>AGREGAR PRUDCTOS</p>
-  </div>
   </div>
     {{/if}}
   <ul>
