--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -1,13 +1,16 @@
 <div class="container">
 <nav>
+    <ul>    
+        <li><a href="/">HOME</a></li>
+    </ul>
 </nav> 
     
     <div class="gallery" >
-        <h1 class="title" >Panel de Administración</h1>
+        <h1 class="title2">Panel de Administración</h1>
         
         <div class="panel">
-        <button onclick="irPanelControl()">Panel de Control</button>
-        <button onclick="irDBUser()">DB User</button>
+        <button onclick="irPanelControl()">Controladores</button>
+        <button onclick="irDBUser()">Data Base User</button>
         <button onclick="irRendimientos()">Rendimientos</button>
         <button onclick="irAgregarProductos()">Agregar Productos</button>
         <button onclick="volver()">Volver</button>
