Muteando bottones de rendimiento y controladores del panel admin

--- a/src/views/addProducts.handlebars
+++ b/src/views/addProducts.handlebars
@@ -46,7 +46,7 @@
           <label for="stock">Stock</label>
           <input type="number" name="stock" id="stock" required>
         </div>
-        <button type="submit">Agregar Producto</button>
+        <button type="submit">Cargar a la DB</button>
       </form>
     </div>
   </div>
