--- a/src/views/dbuser.handlebars
+++ b/src/views/dbuser.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <nav>
-        <button onclick="irPanelControl()">Panel de Control</button>
-        <button onclick="irRendimientos()">Rendimientos</button>
+        <button {{!-- onclick="irPanelControl()" --}}>Controladores</button>
+        <button {{!-- onclick="irRendimientos()" --}}>Rendimientos</button>
         <button onclick="irAgregarProductos()">Agregar Productos</button>
         <button onclick="volver()">Volver</button>
         <a href="/api/session/logout">
