--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -3,7 +3,7 @@
   {{#if isAdmin}}
   <div class="user-dropdown">
     <button class="user-dropdown-btn">
-      <a href="/admin">CONTROL</a>
+      <a href="/admin">PANEL DE CONTROL</a>
     </button>
   </div>
     {{/if}}
