--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -367,6 +367,7 @@ th, td {
 .form-container{
   margin-top: 100px;
   margin-bottom: 200px;
+  text-align: center;
 }
 .form-group{
   padding: 20px;
@@ -379,6 +380,8 @@ th, td {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+/*VISTA MOVIL*/
 @media screen and (max-width: 480px) {
   /******************NAV BAR**********************/
   nav {
@@ -521,6 +524,7 @@ th, td {
   .form-container {
     margin-top: 50px;
     margin-bottom: 100px;
+    text-align: center;
   }
 
   .title2 {
@@ -528,4 +532,5 @@ th, td {
     font-size: 30px;
   }
 }
+
 
