--- a/src/views/admin.handlebars
+++ b/src/views/admin.handlebars
@@ -6,12 +6,12 @@
 </nav> 
     
     <div class="gallery" >
-        <h1 class="title2">Panel de Administración</h1>
+        <h1 class="title2">Panel de Controladores</h1>
         
         <div class="panel">
-        <button onclick="irPanelControl()">Controladores</button>
+        <button {{!-- onclick="irPanelControl()" --}}>Controladores</button>
         <button onclick="irDBUser()">Data Base User</button>
-        <button onclick="irRendimientos()">Rendimientos</button>
+        <button {{!-- onclick="irRendimientos()" --}}>Rendimientos</button>
         <button onclick="irAgregarProductos()">Agregar Productos</button>
         <button onclick="volver()">Volver</button>
         </div>
