--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -12,6 +12,7 @@
         <input type="submit">
     </form>
         <p>No estas registrado ? <a href="/register"> Registrate aquí</a> </p>
+        <p>Olvidaste la contraseña ? <a href="/resetPassword"> Ingrese aquí</a> </p>
 </div>
 </div>
 
