--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -311,6 +311,17 @@ p {
   margin-bottom: 20px;
 }
 
+/* restaurar Password */
+#restartPasswordForm{
+  gap: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 120px;
+  margin-bottom: 20px;
+}
+
 /*register*/
 #registerForm{
   gap: 15px;
