--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -8,10 +8,15 @@
 </nav>
 <div class="profile">
     <h1 class="titleProfile">Mi Perfil</h1>
-    <p class="parrafo">Nombre: {{user.name}}</p>
+    <p class="parrafo">Nombre: {{user.first_name}}</p>
+    <p class="parrafo">Apellido: {{user.last_name}}</p>
     <p class="parrafo">Email: {{user.email}}</p>
     <p class="parrafo">Rol: {{user.role}}</p>
+
  {{!--    <p class="parrafo">Has iniciado sesión {{ sessionCounter }} veces.</p> --}}
     <a href="/api/session/logout"><button class="cs">Cerrar Sesion</button></a>
+      {{#if isAdmin}}
+        <a href="/admin"><button>Panel Control</button></a>
+      {{/if}}
 </div>
 </div>
