--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -10,6 +10,9 @@
         <input class="submit" name="password" type="password" >
         <br>
         <input type="submit">
+        <div>
+            <a href="/api/sessions/github"><button>Entrar con GitHub</button></a>
+        </div>
     </form>
         <p>No estas registrado ? <a href="/register"> Registrate aquí</a> </p>
         <p>Olvidaste la contraseña ? <a href="/resetPassword"> Ingrese aquí</a> </p>
