Si bien funciona todo, no estaria reportando los errores

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -390,6 +390,9 @@ th, td {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
+.passchange{
+  margin-top: 15px;
+}
 
 
 /*VISTA MOVIL*/
