--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -8,7 +8,8 @@
     <title>{{@root.title}}</title>
    {{!--  <link rel="apple-touch-icon" href="DrinkHome.ico"/> --}}
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="ruta_al_archivo/sweetalert2.css">
+  {{!--  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"> --}}
+
 
 </head>
 <body>
