--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -8,9 +8,7 @@
 </nav>
 <div class="profile">
     <h1 class="titleProfile">Mi Perfil</h1>
-    <p class="parrafo">Nombre: {{user.first_name}}</p>
-    <p class="parrafo">Apellido: {{user.last_name}}</p>
-    <p class="parrafo">Email: {{user.email}}</p>
+    <p class="parrafo">{{user.first_name}} {{user.last_name}}</p>
     <p class="parrafo">Rol: {{user.role}}</p>
 
  {{!--    <p class="parrafo">Has iniciado sesión {{ sessionCounter }} veces.</p> --}}
