--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -12,7 +12,7 @@
         <input name="age">
 
         <label>Email</label>
-        <input name="email">
+        <input name="email" type="email">
 
         <label>Contraseña</label>
         <input type="password"name="password">
