--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -3,7 +3,7 @@
   <ul>
     <li><a href="/">HOME</a></li>
     <li><a href="/products">PRODUCTOS</a></li>
-    <li><a href="/cart/646267ba8cc04a3efca60438">CARRITO</a></li>
+    <li><a href="/cart">CARRITO</a></li>
   </ul>
 </nav>
 <div class="profile">
