--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -10,7 +10,7 @@
     <ul>
       <li><a href="/">HOME</a></li>
       <li><a href="/products">PRODUCTOS</a></li>
-      <li><a href="/cart/646267ba8cc04a3efca60438">CARRITO</a></li>
+      <li><a href="/carts/{{user.cart}}">CARRITO</a></li>
     </ul>
     {{#if message}}
       {{message}}
@@ -19,7 +19,7 @@
       <button class="user-dropdown-btn">{{user.role}}</button>
       <div class="user-dropdown-content">
         <p class="users">{{user.first_name}} {{user.last_name}}</p>
-        <a href="/profile"><button>Mi perfil</button> </a>
+        <a href="/current"><button>Mi perfil</button> </a>
         <a href="/api/session/logout">
           <button>Cerrar Sesión</button>
         </a>
