--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -11,7 +11,7 @@
     <div class="user-dropdown-content">
       <p class="users">User: {{user.name}}</p>
       <p>Email: {{user.email}}</p>
-      <a href="/profile"><button>Mi perfil</button> </a>
+      <a href="/current"><button>Mi perfil</button> </a>
       <a href="/api/session/logout">
         <button>Cerrar Sesión</button>
       </a>
