--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -10,7 +10,8 @@
     <ul>
       <li><a href="/">HOME</a></li>
       <li><a href="/products">PRODUCTOS</a></li>
-      <li><a href="/carts/{{user.cart}}">CARRITO</a></li>
+      <li><a href="/chat">CHAT</a></li>
+      <li><a href="/cart/{{user.cart}}">CARRITO</a></li>
     </ul>
     {{#if message}}
       {{message}}
