--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -3,7 +3,7 @@
     <ul>
       <li><a href="/">HOME</a></li>
       <li><a href="/products">PRODUCTOS</a></li>
-      <li><a href="/carts/{{user.cart._id}}">CARRITO</a></li>
+      <li><a href="/cart/{{user.cart._id}}">CARRITO</a></li>
     
     </ul>
     <div class="user-dropdown">
