--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -17,7 +17,7 @@
         <label>Contraseña</label>
         <input type="password"name="password">
         
-        <input type="submit">
+         <button type="submit">Registrar</button>
     </form>
     <p>¿Ya tenes una cuenta ? <a href="/login">Ingresa aquí</a></p>
 </div>
