Correciones/ controladores user/cart fetch modificaciones rutas user sessions

--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -9,7 +9,7 @@
 <div class="profile">
     <h1 class="titleProfile">Mi Perfil</h1>
     <p class="parrafo">{{user.first_name}} {{user.last_name}}</p>
-    <p class="parrafo">Rol: {{user.role}}</p>
+    <p class="parrafo">RANGO: {{user.role}}</p>
 
  {{!--    <p class="parrafo">Has iniciado sesión {{ sessionCounter }} veces.</p> --}}
     <a href="/api/session/logout"><button class="cs">Cerrar Sesion</button></a>
