--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -45,7 +45,7 @@
       <p>{{this.description}}</p>
       <p>${{this.price}}</p>
       <p>Stock: {{this.stock}}</p>
-      <button>Agregar al carrito</button>
+       <button class="add-to-cart-button" data-product-id="{{this._id}}">Agregar al carrito</button>
     </div>
     {{/each}}
   </div>
