--- a/src/views/prod.handlebars
+++ b/src/views/prod.handlebars
@@ -48,7 +48,7 @@
                 <p>Category: {{this.category}}</p>
                 <p>Price: {{this.price}}</p>
                 <p>Stock: {{this.stock}}</p>
-                <button>Agregar al carrito</button>
+                <button class="addTocart" dataProdId="{{this._id}}">Agregar al carrito</button>
             </div>
         {{/each}}
     </div>
