--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -32,6 +32,6 @@
         <p>Price: {{this.product.price}}</p>
         <p>Stock: {{this.product.stock}}</p>
         <p>Disponibilidad: {{this.product.status}}</p>
-        <button>Agregar al carrito</button>
+         <button class="add-to-cart-button" data-product-id="{{this._id}}">Agregar al carrito</button>
       </div>
   </div>
