Correccion y funcionamiento de los botones

--- a/src/views/addProducts.handlebars
+++ b/src/views/addProducts.handlebars
@@ -10,7 +10,7 @@
   <div class="gallery">
     
     <div class="form-container">
-      <form id="productForm" action="/admin/agregar-productos" method="POST">
+      <form id="productForm" action="/agregar-productos" method="POST">
         <div class="form-group">
           <label for="title">Título</label>
           <input type="text" name="title" id="title" required>
