--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -11,7 +11,7 @@
       <div class="user-dropdown-content">
         <p class="users">User: {{user.name}}</p>
         <p>Email: {{user.email}}</p>
-        <a href="/profile"><button>Mi perfil</button></a>
+        <a href="/current/"><button>Mi perfil</button></a>
         <a href="/api/session/logout">
           <button>Cerrar Sesión</button>
         </a>
@@ -25,16 +25,22 @@
     {{#each cart.products}}
       <div class="product">
         <h2>{{this.product.title}}</h2>
-        <p>Unidades: {{this.quantity}}</p>
         <img src="{{this.product.img}}" alt="{{this.product.title}}">
-        <p>{{this.product.description}}</p>
+        <h3>{{this.product.description}}</h3>
+        <p class="parra">{{this.product.category}}</p>
+        <p>Stock:{{this.product.stock}}</p>
+        <p>Unidades: {{this.quantity}}</p>
         <p class="parra">Price ${{this.product.price}}</p>
-        <p>{{this.product.category}}</p>
-        <p class="parra">Stock {{this.product.stock}}</p>
       </div>
     {{/each}}
   </div>
   <br>
   <br>
-  <h2>Total: ${{total}}</h2>
+    <div>
+        <h2>Total: ${{total}}</h2>
+        <button id="purchaseBtn" class="purchaseB" data-cart-id={{user.cart}}>COMPRAR</button>
+    </div>
 </div>
+
+
+<script src="js/buyProd.js"></script>
