--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -10,11 +10,15 @@
     <h1 class="titleProfile">Mi Perfil</h1>
     <p class="parrafo">{{user.first_name}} {{user.last_name}}</p>
     <p class="parrafo">RANGO: {{user.role}}</p>
-
  {{!--    <p class="parrafo">Has iniciado sesión {{ sessionCounter }} veces.</p> --}}
     <a href="/api/session/logout"><button class="cs">Cerrar Sesion</button></a>
       {{#if isAdmin}}
         <a href="/admin"><button>Panel Control</button></a>
       {{/if}}
+      
+       
+      
 </div>
 </div>
+
+<script src="/js/admin.js"></script>
