Correccion y funcionamiento de los botones

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -36,11 +36,8 @@
   </div>
   <br>
   <br>
-    <div>
-        <h2>Total: ${{total}}</h2>
-        <button id="purchaseBtn" class="purchaseB" data-cart-id={{user.cart}}>COMPRAR</button>
-    </div>
+     <h2>Total: ${{total}}</h2>
+       <button id="purchaseBtn" data-cart-id={{user.cart}}>COMPRAR</button>
+  
 </div>
-
-
-<script src="js/buyProd.js"></script>
+<script src="/js/ticket.js"></script>
