--- a/src/views/product.handlebars
+++ b/src/views/product.handlebars
@@ -35,3 +35,5 @@
          <button class="cartB" data-product-id="{{this._id}}" data-user-id="{{../user._id}}" data-cart-id="{{../user.cart}}">Agregar al carrito</button>
       </div>
   </div>
+
+<script src="/js/buyProd.js"></script>
