Correccion no cargaba al cart

--- a/src/views/cart.handlebars
+++ b/src/views/cart.handlebars
@@ -36,8 +36,11 @@
   </div>
   <br>
   <br>
-     <h2>Total: ${{total}}</h2>
-       <button id="purchaseBtn" data-cart-id={{user.cart}}>COMPRAR</button>
-  
+     <div>
+        <h2>Total: ${{total}}</h2>
+        <button id="purchaseBtn" class="" data-cart-id={{user.cart}}>COMPRAR</button>
+    </div>
 </div>
+
+
 <script src="/js/ticket.js"></script>
