--- a/src/views/current.handlebars
+++ b/src/views/current.handlebars
@@ -17,7 +17,7 @@
       {{/if}}
 
       {{#if isPremium}}
-      <a href="/agregar-productos"><button> Agregar Productos (Premium)</button></a>
+          <button onclick="irAgregarProductos()">AGREGAR PRODUCTOS ( PREMIUM )</a>
       {{/if}}
       
        
